--- a/libs/common-base/pubspec.yaml
+++ b/libs/common-base/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_loggy_dio: ^2.0.0+3
   permission_handler: ^10.0.0
   intl: ^0.17.0
+  connectivity_plus: ^2.3.7
+  internet_connection_checker: ^0.0.1+4
 
 dev_dependencies:
   flutter_test:
