--- a/libs/common-base/pubspec.yaml
+++ b/libs/common-base/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   connectivity_plus: ^3.0.2
   internet_connection_checker: ^1.0.0+1
   encrypt: ^5.0.1
+  firebase_messaging: ^14.2.6
 
 dev_dependencies:
   flutter_test:
