--- a/libs/common-base/pubspec.yaml
+++ b/libs/common-base/pubspec.yaml
@@ -11,15 +11,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  flutter_secure_storage: ^6.0.0
-  dio: ^4.0.6
+  flutter_secure_storage: ^8.0.0
+  dio: ^5.1.2
   loggy: ^2.0.1+1
-  flutter_loggy_dio: ^2.0.0+3
-  permission_handler: ^10.0.0
+  flutter_loggy_dio: ^3.0.1
+  permission_handler: ^10.2.0
   intl: ^0.18.0
   connectivity_plus: ^3.0.2
   internet_connection_checker: ^1.0.0+1
